<?xml version="1.0"?>
<package format="3">
  <name>servo_control</name>
  <version>0.0.1</version>
  <description>ROS2 package for controlling SC09 and ST3215 servos via serial interface.</description>

  <maintainer email="anoble3@sheffield.ac.uk">andy</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Optional testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
